--- a/barra.css
+++ b/barra.css
@@ -4,9 +4,18 @@
     box-sizing: border-box;
 }
 Body {
-    background-color: rgb(174 148 109);
-    color:black;
-    font-size: 16px;
+    
+
+
+    background-image: url("imagens/lampada.png");
+    
+    
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    width: 100%;
+    
+   
 }
 
 nav {position: fixed;
@@ -26,7 +35,7 @@ nav ul li {line-height: 20px;
 nav ul li a{
     font-size: 26px;
     text-decoration: none;
-    color:rgb(16, 248, 8);
+    color:rgb(255, 255, 255);
     font-weight: 800;
    line-height: 60px;
    top:0%
@@ -57,7 +66,8 @@ nav ul li:hover .menu ul li:hover{
     
 }
 nav ul li:hover{
-    text-decoration:underline; }
+    text-decoration:underline;
+    }
 
 
     ------------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -95,12 +105,15 @@ width:80%;
 left: 100px;}
 .fundo{
     width: 100%;
-    background-color:rgb(174 148 109);
+    height: 100%;
+    
+    background-repeat: no-repeat;
+   
 }
 .Supremo{
 background-color:rgba(0,0,0,0.4);
     font-size: 30px;
-    color:rgb(16, 248, 8);
+    color:rgb(0, 0, 0);
    text-decoration:underline;
     padding: 10px;
    border: 3px;
